WIP: Save progress before switching branches

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html lang="en" class="flex flex-col min-h-screen max-h-screen">
+<html lang="en" class="flex flex-col max-h-screen min-h-screen bg-[#FDF0E8]">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="flex flex-col h-full">
-		<div class="flex flex-col h-full">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="flex flex-col max-h-screen min-h-screen">
+		<div>
+		%sveltekit.body%
+	</div>
 	</body>
 </html>
